@@ -405,13 +405,21 @@ EOT
 type=multi
 options=email|local|ldap|radius|kerberos|preregistered_guests
 description=<<EOT
-Method or Methods by which registering nodes will be authenticated.
-Templates for LDAP and local are available at
+Method or methods by which registering nodes will be authenticated.  
+Templates for LDAP, RADIUS, Kerberos, local and guests are available at
 <conf_dir>/authentication/. 
 If you wish to use a different authentication mechanism, simply create 
 a file called <conf_dir>/authentication/<authname>.pm, fill it with
 the necessary data, and set auth=<authname>.  The default value, 
 local, relies on a local access file in <conf_dir>/user.conf.
+EOT
+
+[registration.default_auth]
+type=text
+description=<<EOT
+Authentication method selected as the default in the captive portal 
+drop-down. Only useful if you have more than one authentication method
+(registration.auth).
 EOT
 
 [registration.button_text]
