@@ -30,9 +30,9 @@
     [% END %]
 [% ELSE %]
 <select name='auth'>
-   <option value='' selected>[% txt_select_authentications %]</option>
+   <option value=''>[% txt_select_authentication %]</option>
    [% FOREACH authentication_info IN list_authentications.pairs %]
-   <option value='[% authentication_info.key %]'>[% authentication_info.value %]</option>
+   <option [% IF authentication_info.key == selected_auth %]selected [% END %]value='[% authentication_info.key %]'>[% authentication_info.value %]</option>
    [% END %]
 </select>
 [% END %]
@@ -41,7 +41,7 @@
 <p align="center"><font face="Arial">
 <table>
 <tr>
-  <td>[% txt_username %]</td><td><input type="text" name="login" id="login"></td>
+  <td>[% txt_username %]</td><td><input type="text" name="login" id="login" value="[% login %]"></td>
 </tr>
 <tr>
   <td>[% txt_password %]</td><td><input type="password" name="password"></td>
